--- a/UDVogue/UDVogueApp/static/css/style.css
+++ b/UDVogue/UDVogueApp/static/css/style.css
@@ -232,19 +232,20 @@ button {
     width: 100%;
     float: left;
     background-image: url(../images/banner-bg.png);
+    background-color: #000000;
     height: auto;
     background-size: 100%;
     background-repeat: no-repeat;
 }
 
 .bg-light {
-    background-color: #7c2c0c!important;
+    background-color: #000000 !important;
 }
 
 .navbar {
     padding: .5rem 0px;
-    border-top: 20px solid #efe4d1;
-    border-bottom: 20px solid #efe4d1;
+    border-top: 20px solid #606060;
+    border-bottom: 20px solid #606060;
 }
 
 .image_1 {
@@ -274,14 +275,14 @@ button {
 .navbar-expand-lg .navbar-nav .nav-link {
     padding-right: 15px;
     padding-left: 15px;
-    color: #fcfefe;
+    color: #606060;
     font-size: 18px;
     text-transform: uppercase;
 }
 
 .navbar-light .navbar-nav .nav-link:focus,
 .navbar-light .navbar-nav .nav-link:hover {
-    color: #efe4d1;
+    color: #606060;
 }
 
 
@@ -294,7 +295,7 @@ button {
     width: 100%;
     float: left;
     padding-bottom: 90px;
-    background-color: #fae6c4;
+    background-color: #606060;
     height: auto;
     box-shadow: 0px 2px 10px 0px;
 }
@@ -303,7 +304,7 @@ button {
     width: 100%;
     float: left;
     font-size: 50px;
-    color: #7c2c0c;
+    color: #000000;
     font-weight: bold;
     line-height: 60px;
 }
@@ -312,7 +313,7 @@ button {
     width: 80%;
     float: left;
     font-size: 16px;
-    color: #7c2c0c;
+    color: #000000;
     margin: 0px;
     padding-top: 30px;
     font-weight: 500;
@@ -333,9 +334,9 @@ button {
     width: 100%;
     float: left;
     font-size: 18px;
-    color: #7c2c0c;
+    color: #000000;
     background-color: transparent;
-    border: 1px solid #b48569;
+    border: 1px solid #606060;
     padding: 8px 5px;
     text-align: center;
     font-weight: 500;
