--- a/UDVogue/UDVogueApp/static/css/style.css
+++ b/UDVogue/UDVogueApp/static/css/style.css
@@ -244,8 +244,8 @@ button {
 
 .navbar {
     padding: .5rem 0px;
-    border-top: 20px solid #606060;
-    border-bottom: 20px solid #606060;
+    border-top: 20px solid #ffffff;
+    border-bottom: 20px solid #ffffff;
 }
 
 .image_1 {
@@ -275,14 +275,14 @@ button {
 .navbar-expand-lg .navbar-nav .nav-link {
     padding-right: 15px;
     padding-left: 15px;
-    color: #606060;
+    color: #ffffff;
     font-size: 18px;
     text-transform: uppercase;
 }
 
 .navbar-light .navbar-nav .nav-link:focus,
 .navbar-light .navbar-nav .nav-link:hover {
-    color: #606060;
+    color: #ffffff;
 }
 
 
@@ -295,7 +295,7 @@ button {
     width: 100%;
     float: left;
     padding-bottom: 90px;
-    background-color: #606060;
+    background-color: #ffffff;
     height: auto;
     box-shadow: 0px 2px 10px 0px;
 }
@@ -336,7 +336,7 @@ button {
     font-size: 18px;
     color: #000000;
     background-color: transparent;
-    border: 1px solid #606060;
+    border: 1px solid #ffffff;
     padding: 8px 5px;
     text-align: center;
     font-weight: 500;
