--- a/UDVogue/UDVogueApp/templates/base.html
+++ b/UDVogue/UDVogueApp/templates/base.html
@@ -139,7 +139,7 @@
             <div class="about_section_2">
                <div class="row">
                   <div class="col-md-6">
-                     <div class="image_2"><img src="{% static 'images/img-2.png' %}"></div>
+                     <div class="image_2"><img src="{% static 'images/Pasarela.jpg' %}"></div>
                   </div>
                   <div class="col-md-6">
                      <h1 class="about_taital">About Us</h1>
@@ -165,7 +165,7 @@
                            <div class="col-md-4">
                               <div class="box_main">
                                  <p class="chair_text">Chair 01</p>
-                                 <div class="image_3" href="#"><img src="{% static 'images/img-3.png' %}"></div>
+                                 <div class="image_3" href="#"><img src="{% static 'images/Vogue China.jpg' %}"></div>
                                  <p class="chair_text">Price $100</p>
                                  <div class="buy_bt"><a href="#">Buy Now</a></div>
                               </div>
@@ -173,7 +173,7 @@
                            <div class="col-md-4">
                               <div class="box_main">
                                  <p class="chair_text">Chair 02</p>
-                                 <div class="image_4" href="#"><img src="{% static 'images/img-4.png' %}"></div>
+                                 <div class="image_4" href="#"><img src="{% static 'images/Vogue Filipinas.jpg' %}"></div>
                                  <p class="chair_text">Price $100</p>
                                  <div class="buy_bt"><a href="#">Buy Now</a></div>
                               </div>
@@ -181,7 +181,7 @@
                            <div class="col-md-4">
                               <div class="box_main">
                                  <p class="chair_text">Table</p>
-                                 <div class="image_4" href="#"><img src="{% static 'images/img-5.png' %}"></div>
+                                 <div class="image_4" href="#"><img src="{% static 'images/Vogue Portugal.jpg' %}"></div>
                                  <p class="chair_text">Price $100</p>
                                  <div class="buy_bt"><a href="#">Buy Now</a></div>
                               </div>
@@ -199,7 +199,7 @@
                            <div class="col-md-4">
                               <div class="box_main">
                                  <p class="chair_text">Chair 01</p>
-                                 <div class="image_3" href="#"><img src="{% static 'images/img-3.png' %}"></div>
+                                 <div class="image_3" href="#"><img src="{% static 'images/Vogue Ucrania.jpg' %}"></div>
                                  <p class="chair_text">Price $100</p>
                                  <div class="buy_bt"><a href="#">Buy Now</a></div>
                               </div>
