Modificaciones en las fotos

--- a/UDVogue/UDVogueApp/templates/base.html
+++ b/UDVogue/UDVogueApp/templates/base.html
@@ -165,7 +165,7 @@
                            <div class="col-md-4">
                               <div class="box_main">
                                  <p class="chair_text">Chair 01</p>
-                                 <div class="image_3" href="#"><img src="{% static 'images/Vogue China.jpg' %}"></div>
+                                 <div class="image_3" href="#"><img src="{% static 'images/VogueEspanna.jpg' %}"></div>
                                  <p class="chair_text">Price $100</p>
                                  <div class="buy_bt"><a href="#">Buy Now</a></div>
                               </div>
@@ -173,7 +173,7 @@
                            <div class="col-md-4">
                               <div class="box_main">
                                  <p class="chair_text">Chair 02</p>
-                                 <div class="image_4" href="#"><img src="{% static 'images/Vogue Filipinas.jpg' %}"></div>
+                                 <div class="image_4" href="#"><img src="{% static 'images/VoguePolonia.jpg' %}"></div>
                                  <p class="chair_text">Price $100</p>
                                  <div class="buy_bt"><a href="#">Buy Now</a></div>
                               </div>
@@ -181,7 +181,7 @@
                            <div class="col-md-4">
                               <div class="box_main">
                                  <p class="chair_text">Table</p>
-                                 <div class="image_4" href="#"><img src="{% static 'images/Vogue Portugal.jpg' %}"></div>
+                                 <div class="image_4" href="#"><img src="{% static 'images/VoguePortugal.jpg' %}"></div>
                                  <p class="chair_text">Price $100</p>
                                  <div class="buy_bt"><a href="#">Buy Now</a></div>
                               </div>
@@ -199,7 +199,7 @@
                            <div class="col-md-4">
                               <div class="box_main">
                                  <p class="chair_text">Chair 01</p>
-                                 <div class="image_3" href="#"><img src="{% static 'images/Vogue Ucrania.jpg' %}"></div>
+                                 <div class="image_3" href="#"><img src="{% static 'images/VogueUcrania.jpg' %}"></div>
                                  <p class="chair_text">Price $100</p>
                                  <div class="buy_bt"><a href="#">Buy Now</a></div>
                               </div>
@@ -207,7 +207,7 @@
                            <div class="col-md-4">
                               <div class="box_main">
                                  <p class="chair_text">Chair 02</p>
-                                 <div class="image_4" href="#"><img src="{% static 'images/img-4.png' %}"></div>
+                                 <div class="image_4" href="#"><img src="{% static 'images/VogueChina.jpg' %}"></div>
                                  <p class="chair_text">Price $100</p>
                                  <div class="buy_bt"><a href="#">Buy Now</a></div>
                               </div>
@@ -215,7 +215,7 @@
                            <div class="col-md-4">
                               <div class="box_main">
                                  <p class="chair_text">Table</p>
-                                 <div class="image_4" href="#"><img src="{% static 'images/img-5.png' %}"></div>
+                                 <div class="image_4" href="#"><img src="{% static 'images/VogueBrasil.jpg' %}"></div>
                                  <p class="chair_text">Price $100</p>
                                  <div class="buy_bt"><a href="#">Buy Now</a></div>
                               </div>
@@ -233,7 +233,7 @@
                            <div class="col-md-4">
                               <div class="box_main">
                                  <p class="chair_text">Chair 01</p>
-                                 <div class="image_3" href="#"><img src="{% static 'images/img-3.png' %}"></div>
+                                 <div class="image_3" href="#"><img src="{% static 'images/VogueJapon.jpg' %}"></div>
                                  <p class="chair_text">Price $100</p>
                                  <div class="buy_bt"><a href="#">Buy Now</a></div>
                               </div>
@@ -241,7 +241,7 @@
                            <div class="col-md-4">
                               <div class="box_main">
                                  <p class="chair_text">Chair 02</p>
-                                 <div class="image_4" href="#"><img src="{% static 'images/img-4.png' %}"></div>
+                                 <div class="image_4" href="#"><img src="{% static 'images/VogueGrecia.jpg' %}"></div>
                                  <p class="chair_text">Price $100</p>
                                  <div class="buy_bt"><a href="#">Buy Now</a></div>
                               </div>
@@ -249,7 +249,7 @@
                            <div class="col-md-4">
                               <div class="box_main">
                                  <p class="chair_text">Table</p>
-                                 <div class="image_4" href="#"><img src="{% static 'images/img-5.png' %}"></div>
+                                 <div class="image_4" href="#"><img src="{% static 'images/VogueFilipinas.jpg' %}"></div>
                                  <p class="chair_text">Price $100</p>
                                  <div class="buy_bt"><a href="#">Buy Now</a></div>
                               </div>
