--- a/UDVogue/UDVogueApp/templates/base.html
+++ b/UDVogue/UDVogueApp/templates/base.html
@@ -86,7 +86,7 @@
                            </div>
                         </div>
                         <div class="col-md-6">
-                           <div class="image_1"><img src="{% static 'images/img-1.png' %}"></div>
+                           <div class="image_1"><img src="{% static 'images/Portada1.png' %}"></div>
                         </div>
                      </div>
                   </div>
@@ -102,7 +102,7 @@
                            </div>
                         </div>
                         <div class="col-md-6">
-                           <div class="image_1"><img src="{% static 'images/img-1.png' %}"></div>
+                           <div class="image_1"><img src="{% static 'images/Portada2.png' %}"></div>
                         </div>
                      </div>
                   </div>
@@ -118,7 +118,7 @@
                            </div>
                         </div>
                         <div class="col-md-6">
-                           <div class="image_1"><img src="{% static 'images/img-1.png' %}"></div>
+                           <div class="image_1"><img src="{% static 'images/Portada3.png' %}"></div>
                         </div>
                      </div>
                   </div>
@@ -276,7 +276,7 @@
          <div class="container">
             <div class="row">
                <div class="col-md-6">
-                  <div class="imgage_6"><img src="{% static 'images/img-6.png' %}"></div>
+                  <div class="imgage_6"><img src="{% static 'images/Newsletter.jpg' %}"></div>
                </div>
                <div class="col-md-6">
                   <h1 class="newsletter_taital">Subscribe Newsletter</h1>
