mejoras en la web

--- a/UDVogue/UDVogueApp/templates/base.html
+++ b/UDVogue/UDVogueApp/templates/base.html
@@ -79,10 +79,10 @@
                   <div class="container">
                      <div class="row">
                         <div class="col-md-6">
-                           <h1 class="banner_taital">Best <br> Design <br>of Furnitur</h1>
-                           <p class="banner_text">It is a long established fact that a reader will bedistracted by the readable content of </p>
+                           <h1 class="banner_taital">Elegancia <br> en cada <br>detalle</h1>
+                           <p class="banner_text"> Descubre prendas únicas y accesorios exclusivos donde cada detalle respira elegancia y sofisticación. ¡Tu estilo merece lo mejor! </p>
                            <div class="btn_main">
-                              <div class="contact_bt"><a href="#">Contact US</a></div>
+                              <div class="contact_bt"><a href="#">¡Contáctanos!</a></div>
                            </div>
                         </div>
                         <div class="col-md-6">
@@ -95,7 +95,7 @@
                   <div class="container">
                      <div class="row">
                         <div class="col-md-6">
-                           <h1 class="banner_taital">Best <br> Design <br>of Furnitur</h1>
+                           <h1 class="banner_taital">Sencillez <br> con gran <br>estilo</h1>
                            <p class="banner_text">It is a long established fact that a reader will bedistracted by the readable content of </p>
                            <div class="btn_main">
                               <div class="contact_bt"><a href="#">Contact US</a></div>
@@ -107,28 +107,12 @@
                      </div>
                   </div>
                </div>
-               <div class="carousel-item">
-                  <div class="container">
-                     <div class="row">
-                        <div class="col-md-6">
-                           <h1 class="banner_taital">Best <br> Design <br>of Furnitur</h1>
-                           <p class="banner_text">It is a long established fact that a reader will bedistracted by the readable content of </p>
-                           <div class="btn_main">
-                              <div class="contact_bt"><a href="#">Contact US</a></div>
-                           </div>
-                        </div>
-                        <div class="col-md-6">
-                           <div class="image_1"><img src="{% static 'images/Portada3.png' %}"></div>
-                        </div>
-                     </div>
-                  </div>
-               </div>
             </div>
             <a class="carousel-control-prev" href="#main_slider" role="button" data-slide="prev">
-            <i style="font-style: initial;">01</i>
+            <i style="font-style: initial;"><img src="{% static 'images/flechaIzquierda.png' %}" alt="Flecha izquierda" class="flechas"></i>
             </a>
             <a class="carousel-control-next" href="#main_slider" role="button" data-slide="next">
-            <i style="font-style: initial;">02</i>
+            <i style="font-style: initial;"><img src="{% static 'images/flechaDerecha.png' %}" alt="Flecha Derecha" class="flechas"></i>
             </a>
          </div>
       </div>
