--- a/UDVogue/UDVogueApp/static/css/style.css
+++ b/UDVogue/UDVogueApp/static/css/style.css
@@ -227,25 +227,23 @@ button {
 
 
 /* header section start */
-
 .header_section {
     width: 100%;
     float: left;
     background-image: url(../images/banner-bg.png);
-    background-color: #000000;
     height: auto;
     background-size: 100%;
     background-repeat: no-repeat;
 }
 
 .bg-light {
-    background-color: #000000 !important;
+    background-color: black !important;
 }
 
 .navbar {
     padding: .5rem 0px;
-    border-top: 20px solid #ffffff;
-    border-bottom: 20px solid #ffffff;
+    border-top: 20px solid black;
+    border-bottom: 20px solid black;
 }
 
 .image_1 {
@@ -275,27 +273,25 @@ button {
 .navbar-expand-lg .navbar-nav .nav-link {
     padding-right: 15px;
     padding-left: 15px;
-    color: #ffffff;
-    font-size: 18px;
+    color: whitesmoke;
+    font-size: 16px;
     text-transform: uppercase;
 }
 
 .navbar-light .navbar-nav .nav-link:focus,
 .navbar-light .navbar-nav .nav-link:hover {
-    color: #ffffff;
+    color: lightgray;
 }
-
 
 /* header section end */
 
 
 /* banner section start */
-
 .banner_section {
     width: 100%;
     float: left;
     padding-bottom: 90px;
-    background-color: #ffffff;
+    background-color: whitesmoke;
     height: auto;
     box-shadow: 0px 2px 10px 0px;
 }
@@ -334,17 +330,17 @@ button {
     width: 100%;
     float: left;
     font-size: 18px;
-    color: #000000;
-    background-color: transparent;
-    border: 1px solid #ffffff;
+    color: white;
+    background-color: black;
+    border: 1px solid black;
     padding: 8px 5px;
     text-align: center;
     font-weight: 500;
 }
 
 .contact_bt a:hover {
-    color: #ffffff;
-    background-color: #7c2c0c;
+    color: white;
+    background-color: #666666;
 }
 
 #main_slider a.carousel-control-next {
@@ -356,7 +352,7 @@ button {
 #main_slider a.carousel-control-prev {
     position: absolute;
     left: 615px;
-    top: 90%;
+    top: 95%;
 }
 
 #main_slider .carousel-control-prev,
@@ -366,8 +362,8 @@ button {
     background: transparent;
     opacity: 1;
     font-size: 20px;
-    color: #7c2c0c;
-    border: 1px solid #757068;
+    color: black;
+    border: 2px solid black;
     border-radius: 100px;
 }
 
@@ -375,7 +371,11 @@ button {
 #main_slider .carousel-control-next:hover,
 #main_slider .carousel-control-prev:focus,
 #main_slider .carousel-control-next:focus {
-    color: #000;
+    color: black;
+}
+
+.flechas {
+    width: 60%;
 }
 
 
