actualizacion de codigo

--- a/UDVogue/UDVogueApp/templates/base.html
+++ b/UDVogue/UDVogueApp/templates/base.html
@@ -109,14 +109,16 @@
                </div>
             </div>
             <a class="carousel-control-prev" href="#main_slider" role="button" data-slide="prev">
-            <i style="font-style: initial;"> << </i>
+            <i style="font-style: initial;"><<</i>
             </a>
             <a class="carousel-control-next" href="#main_slider" role="button" data-slide="next">
-            <i style="font-style: initial;"> >> </i>
+            <i style="font-style: initial;">>></i>
             </a>
          </div>
       </div>
       <!-- banner section end -->
+
+
       <!-- about section start -->
       <div class="about_section layout_padding">
          <div class="container">
@@ -129,13 +131,15 @@
                      <h1 class="about_taital">¿Quiénes somos?</h1>
                      <!--<p class="about_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised </p>-->
                      {%block contenido%} {%endblock%}
-                     <div class="readmore_bt"><a href="#">Información extra</a></div>
+                     <div class="readmore_bt"><a href="#">Más información</a></div>
                   </div>
                </div>
             </div>
          </div>
       </div>
       <!-- about section end -->
+
+
       <!--  design section start -->
       <div class="design_section layout_padding">
          <div id="my_slider" class="carousel slide" data-ride="carousel">
