--- a/UDVogue/UDVogueApp/static/css/style.css
+++ b/UDVogue/UDVogueApp/static/css/style.css
@@ -269,13 +269,13 @@ button {
     padding-right: 15px;
     padding-left: 15px;
     color: whitesmoke;
-    font-size: 16px;
+    font-size: 14px;
     text-transform: uppercase;
 }
 
 .navbar-light .navbar-nav .nav-link:focus,
 .navbar-light .navbar-nav .nav-link:hover {
-    color: lightgray;
+    color: rgb(100, 100, 100);
 }
 /* header section end */
 
@@ -285,7 +285,7 @@ button {
     width: 100%;
     float: left;
     padding-bottom: 90px;
-    background-color: whitesmoke;
+    background-color: rgb(220, 220, 220);
     height: auto;
     box-shadow: 0px 2px 10px 0px;
 }
@@ -294,7 +294,7 @@ button {
     width: 100%;
     float: left;
     font-size: 50px;
-    color: #000000;
+    color: black;
     font-weight: bold;
     line-height: 60px;
 }
@@ -303,7 +303,7 @@ button {
     width: 80%;
     float: left;
     font-size: 16px;
-    color: #000000;
+    color: black;
     margin: 0px;
     padding-top: 30px;
     font-weight: 500;
@@ -340,7 +340,7 @@ button {
 #main_slider a.carousel-control-next {
     position: absolute;
     right: 615px;
-    top: 90%;
+    top: 95%;
 }
 
 #main_slider a.carousel-control-prev {
@@ -379,96 +379,6 @@ button {
     height: 11%;
     float: left;
 }
-/*Correccion para que queden en linea*/
-/*.banner_section {
-    width: 100%;
-    float: left;
-    padding-bottom: 90px;
-    background-color: #fae6c4;
-    height: auto;
-    box-shadow: 0px 2px 10px 0px;
-}
-
-.banner_taital {
-    width: 100%;
-    float: left;
-    font-size: 50px;
-    color: #7c2c0c;
-    font-weight: bold;
-    line-height: 60px;
-}
-
-.banner_text {
-    width: 80%;
-    float: left;
-    font-size: 16px;
-    color: #7c2c0c;
-    margin: 0px;
-    padding-top: 30px;
-    font-weight: 500;
-}
-
-.btn_main {
-    width: 100%;
-    float: left;
-    padding-top: 50px;
-}
-
-.contact_bt {
-    width: 170px;
-    float: left;
-}
-
-.contact_bt a {
-    width: 100%;
-    float: left;
-    font-size: 18px;
-    color: #7c2c0c;
-    background-color: transparent;
-    border: 1px solid #b48569;
-    padding: 8px 5px;
-    text-align: center;
-    font-weight: 500;
-}
-
-.contact_bt a:hover {
-    color: #ffffff;
-    background-color: #7c2c0c;
-}
-
-#main_slider a.carousel-control-next {
-    position: absolute;
-    right: 615px;
-    top: 90%;
-}
-
-#main_slider a.carousel-control-prev {
-    position: absolute;
-    left: 615px;
-    top: 90%;
-}
-
-#main_slider .carousel-control-prev,
-#main_slider .carousel-control-next {
-    width: 55px;
-    height: 55px;
-    background: transparent;
-    opacity: 1;
-    font-size: 20px;
-    color: #7c2c0c;
-    border: 1px solid #757068;
-    border-radius: 100px;
-}
-
-#main_slider .carousel-control-prev:hover,
-#main_slider .carousel-control-next:hover,
-#main_slider .carousel-control-prev:focus,
-#main_slider .carousel-control-next:focus {
-    color: #000;
-}
-*/
-
-
 /* banner section end */
 
 
@@ -520,17 +430,6 @@ button {
     right: initial;
     top: 0px;
 }
-
-/*.image_2::before {
-    content: '';
-    position: absolute;
-    width: 100px;
-    height: 100px;
-    background-image: url(../images/arrow-1.png);
-    left: initial;
-    right: 0px;
-    bottom: 0px;
-}*/
 
 .readmore_bt {
     width: 170px;
@@ -620,10 +519,10 @@ button {
 }
 
 .image_4 {
-    width: 100%;
+    width: 99%;
     text-align: center;
-    padding-top: 100px;
-    min-height: 332px;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 .buy_bt {
@@ -636,7 +535,7 @@ button {
 .buy_bt a {
     width: 100%;
     font-size: 18px;
-    color: #ffffff;
+    color: white;
     background-color: black;
     padding: 8px 25px;
     text-align: center;
@@ -654,8 +553,8 @@ button {
     position: absolute;
     right: 615px;
     top: 110%;
-    background-color: #7c2c0c;
-    color: #ffffff;
+    background-color: black;
+    color: white;
 }
 
 #my_slider a.carousel-control-prev {
@@ -668,10 +567,10 @@ button {
 #my_slider .carousel-control-next {
     width: 55px;
     height: 55px;
-    background: #ffffff;
+    background: white;
     opacity: 1;
     font-size: 20px;
-    color: #000;
+    color: black;
     border-radius: 100px;
 }
 
@@ -679,47 +578,29 @@ button {
 #my_slider .carousel-control-next:hover,
 #my_slider .carousel-control-prev:focus,
 #my_slider .carousel-control-next:focus {
-    color: #ffffff;
-    background-color: #7c2c0c;
+    color: white;
+    background-color: black;
 }
 
-.read_bt {
+.extraContainer {
     width: 170px;
     margin: 0 auto;
     padding-top: 150px;
-}
-
-.read_bt a {
-    width: 100%;
-    float: left;
-    font-size: 18px;
-    color: #7c2c0c;
-    background-color: transparent;
-    border: 1px solid #bb9180;
-    padding: 8px 25px;
-    text-align: center;
-    margin-top: 40px;
-}
-
-.read_bt a:hover {
-    color: #ffffff;
-    background-color: #7c2c0c;
 }
 /* design section end */
 
 
 /* newsletter section start */
-
 .newsletter_section {
     width: 100%;
     float: left;
-    background-color: #fdebcb;
+    background-color: rgb(220, 220, 220);
     height: auto;
     padding: 90px 0px;
 }
 
 .imgage_6 {
-    width: 100%;
+    width: 85%;
     float: left;
 }
 
@@ -727,7 +608,7 @@ button {
     width: 100%;
     float: left;
     font-size: 40px;
-    color: #7c2c0c;
+    color: black;
     font-weight: bold;
 }
 
@@ -735,15 +616,15 @@ button {
     width: 100%;
     float: left;
     background-color: transparent;
-    border: 1px solid #8b4222;
+    border: 1px solid black;
     padding: 8px 15px;
-    color: #7c2c0c;
+    color: black;
     font-size: 20px;
     margin-top: 30px;
 }
 
 input.email_text::placeholder {
-    color: #7c2c0c;
+    color: black;
 }
 
 .subscribe_bt {
@@ -756,21 +637,19 @@ input.email_text::placeholder {
     width: 100%;
     float: left;
     font-size: 16px;
-    color: #ffffff;
-    background-color: #7c2c0c;
+    color: white;
+    background-color: black;
     text-align: center;
     padding: 5px 20px;
     text-transform: uppercase;
     margin-top: 30px;
-    border: 1px solid #7c2c0c;
+    border: 1px solid black;
 }
 
 .subscribe_bt a:hover {
-    color: #7c2c0c;
-    background-color: transparent;
+    color: black;
+    background-color: white;
 }
-
-
 /* newsletter section ens */
 
 
