--- a/UDVogue/UDVogueApp/templates/base.html
+++ b/UDVogue/UDVogueApp/templates/base.html
@@ -71,6 +71,8 @@
          </div>
       </div>
       <!-- header section end -->
+
+
       <!-- banner section start -->
       <div class="banner_section layout_padding">
          <div id="main_slider" class="carousel slide" data-ride="carousel">
@@ -146,32 +148,29 @@
             <div class="carousel-inner">
                <div class="carousel-item active">
                   <div class="container">
-                     <h1 class="design_taital">Our Work Furniture</h1>
-                     <p class="design_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteratio</p>
+                     <h1 class="design_taital">Nuestras revistas</h1>
+                     <p class="design_text">¡Descubre el producto perfecto en nuestra amplia colección de revistas, donde siempre encontrarás algo único para ti!</p>
                      <div class="design_section_2">
                         <div class="row">
                            <div class="col-md-4">
                               <div class="box_main">
-                                 <p class="chair_text">Chair 01</p>
+                                 <p class="chair_text">España</p>
                                  <div class="image_3" href="#"><img src="{% static 'images/VogueEspanna.jpg' %}"></div>
-                                 <p class="chair_text">Price $100</p>
-                                 <div class="buy_bt"><a href="#">Buy Now</a></div>
+                                 <div class="buy_bt"><a href="#">Explorar</a></div>
                               </div>
                            </div>
                            <div class="col-md-4">
                               <div class="box_main">
-                                 <p class="chair_text">Chair 02</p>
-                                 <div class="image_4" href="#"><img src="{% static 'images/VoguePolonia.jpg' %}"></div>
-                                 <p class="chair_text">Price $100</p>
-                                 <div class="buy_bt"><a href="#">Buy Now</a></div>
+                                 <p class="chair_text">Polonia</p>
+                                 <div class="image_3" href="#"><img src="{% static 'images/VoguePolonia.jpg' %}"></div>
+                                 <div class="buy_bt"><a href="#">Explorar</a></div>
                               </div>
                            </div>
                            <div class="col-md-4">
                               <div class="box_main">
-                                 <p class="chair_text">Table</p>
-                                 <div class="image_4" href="#"><img src="{% static 'images/VoguePortugal.jpg' %}"></div>
-                                 <p class="chair_text">Price $100</p>
-                                 <div class="buy_bt"><a href="#">Buy Now</a></div>
+                                 <p class="chair_text">Portugal</p>
+                                 <div class="image_3" href="#"><img src="{% static 'images/VoguePortugal.jpg' %}"></div>
+                                 <div class="buy_bt"><a href="#">Explorar</a></div>
                               </div>
                            </div>
                         </div>
@@ -180,32 +179,29 @@
                </div>
                <div class="carousel-item">
                   <div class="container">
-                     <h1 class="design_taital">Our Work Furniture</h1>
-                     <p class="design_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteratio</p>
+                     <h1 class="design_taital">Nuestras revistas</h1>
+                     <p class="design_text">¡Descubre el producto perfecto en nuestra amplia colección de revistas, donde siempre encontrarás algo único para ti!</p>
                      <div class="design_section_2">
                         <div class="row">
                            <div class="col-md-4">
                               <div class="box_main">
-                                 <p class="chair_text">Chair 01</p>
+                                 <p class="chair_text">Ucrania</p>
                                  <div class="image_3" href="#"><img src="{% static 'images/VogueUcrania.jpg' %}"></div>
-                                 <p class="chair_text">Price $100</p>
-                                 <div class="buy_bt"><a href="#">Buy Now</a></div>
+                                 <div class="buy_bt"><a href="#">Explorar</a></div>
                               </div>
                            </div>
                            <div class="col-md-4">
                               <div class="box_main">
-                                 <p class="chair_text">Chair 02</p>
-                                 <div class="image_4" href="#"><img src="{% static 'images/VogueChina.jpg' %}"></div>
-                                 <p class="chair_text">Price $100</p>
-                                 <div class="buy_bt"><a href="#">Buy Now</a></div>
+                                 <p class="chair_text">China</p>
+                                 <div class="image_3" href="#"><img src="{% static 'images/VogueChina.jpg' %}"></div>
+                                 <div class="buy_bt"><a href="#">Explorar</a></div>
                               </div>
                            </div>
                            <div class="col-md-4">
                               <div class="box_main">
-                                 <p class="chair_text">Table</p>
-                                 <div class="image_4" href="#"><img src="{% static 'images/VogueBrasil.jpg' %}"></div>
-                                 <p class="chair_text">Price $100</p>
-                                 <div class="buy_bt"><a href="#">Buy Now</a></div>
+                                 <p class="chair_text">Brasil</p>
+                                 <div class="image_3" href="#"><img src="{% static 'images/VogueBrasil.jpg' %}"></div>
+                                 <div class="buy_bt"><a href="#">Explorar</a></div>
                               </div>
                            </div>
                         </div>
@@ -214,32 +210,29 @@
                </div>
                <div class="carousel-item">
                   <div class="container">
-                     <h1 class="design_taital">Our Work Furniture</h1>
-                     <p class="design_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteratio</p>
+                     <h1 class="design_taital">Nuestras revistas</h1>
+                     <p class="design_text">¡Descubre el producto perfecto en nuestra amplia colección de revistas, donde siempre encontrarás algo único para ti!</p>
                      <div class="design_section_2">
                         <div class="row">
                            <div class="col-md-4">
                               <div class="box_main">
-                                 <p class="chair_text">Chair 01</p>
+                                 <p class="chair_text">Japon</p>
                                  <div class="image_3" href="#"><img src="{% static 'images/VogueJapon.jpg' %}"></div>
-                                 <p class="chair_text">Price $100</p>
-                                 <div class="buy_bt"><a href="#">Buy Now</a></div>
+                                 <div class="buy_bt"><a href="#">Explorar</a></div>
                               </div>
                            </div>
                            <div class="col-md-4">
                               <div class="box_main">
-                                 <p class="chair_text">Chair 02</p>
-                                 <div class="image_4" href="#"><img src="{% static 'images/VogueGrecia.jpg' %}"></div>
-                                 <p class="chair_text">Price $100</p>
-                                 <div class="buy_bt"><a href="#">Buy Now</a></div>
+                                 <p class="chair_text">Grecia</p>
+                                 <div class="image_3" href="#"><img src="{% static 'images/VogueGrecia.jpg' %}"></div>
+                                 <div class="buy_bt"><a href="#">Explorar</a></div>
                               </div>
                            </div>
                            <div class="col-md-4">
                               <div class="box_main">
-                                 <p class="chair_text">Table</p>
-                                 <div class="image_4" href="#"><img src="{% static 'images/VogueFilipinas.jpg' %}"></div>
-                                 <p class="chair_text">Price $100</p>
-                                 <div class="buy_bt"><a href="#">Buy Now</a></div>
+                                 <p class="chair_text">Filipinas</p>
+                                 <div class="image_3" href="#"><img src="{% static 'images/VogueFilipinas.jpg' %}"></div>
+                                 <div class="buy_bt"><a href="#">Explorar</a></div>
                               </div>
                            </div>
                         </div>
@@ -254,11 +247,11 @@
             <i class="fa fa-long-arrow-right" style="font-size:24px"></i>
             </a>
          </div>
-         <div class="container">
-            <div class="read_bt"><a href="#">Read More</a></div>
-         </div>
+         <div class="extraContainer"></div>
       </div>
       <!--  design section end -->
+
+
       <!--  newsletter section start -->
       <div class="newsletter_section layout_padding">
          <div class="container">
@@ -267,14 +260,16 @@
                   <div class="imgage_6"><img src="{% static 'images/Newsletter.jpg' %}"></div>
                </div>
                <div class="col-md-6">
-                  <h1 class="newsletter_taital">Subscribe Newsletter</h1>
-                  <input type="text" class="email_text" placeholder="Enter Your Email" name="Enter Your Email">
-                  <div class="subscribe_bt"><a href="#">Subscribe Now</a></div>
+                  <h1 class="newsletter_taital">¿Ofertas especiales?</h1>
+                  <input type="text" class="email_text" placeholder="Introduce tu email" name="Enter Your Email">
+                  <div class="subscribe_bt"><a href="#">Suscríbete</a></div>
                </div>
             </div>
          </div>
       </div>
       <!--  newsletter section end -->
+
+
       <!-- contact section start -->
       <div class="contact_section layout_padding">
          <div class="container">
@@ -293,7 +288,7 @@
                   <div class="col-md-6">
                      <div class="map_main">
                         <div class="map-responsive">
-                           <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d244.4815321397388!2d-2.9357747753367542!3d43.26283519753031!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd4e4fd8274a772b%3A0xd31a0f5b591a56c8!2sClaire&#39;s!5e1!3m2!1ses!2ses!4v1732225723762!5m2!1ses!2ses" width="600" height="360" frameborder="0" style="border:0; width: 100%;" allowfullscreen=""></iframe>
+                           <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d410.53283066091524!2d-2.9309043090599958!3d43.26219955019639!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1ses!2ses!4v1732299123201!5m2!1ses!2ses" width="600" height="360" frameborder="0" style="border:0; width: 100%;" allowfullscreen=""></iframe>
                         </div>
                      </div>
                   </div>
