--- a/UDVogue/UDVogueApp/templates/base.html
+++ b/UDVogue/UDVogueApp/templates/base.html
@@ -52,11 +52,11 @@
                         <a class="nav-link" href="design.html">Revistas</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link" href="about.html">¿Quiénes somos?</a>
+                        <a class="nav-link" href="about.html">Conócenos</a>
                      </li>
-                     <li class="nav-item">
+                     <!--<li class="nav-item">
                         <a class="nav-link" href="contact.html">¡Contáctanos!</a>
-                     </li>
+                     </li>-->
                   </ul>
                   <form class="form-inline my-2 my-lg-0">
                      <div class="search_icon">
@@ -141,114 +141,45 @@
       </div>
       <!-- about section end -->
 
-
+      
       <!--  design section start -->
       <div class="design_section layout_padding">
          <div id="my_slider" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-               <div class="carousel-item active">
-                  <div class="container">
-                     <h1 class="design_taital">Nuestras revistas</h1>
-                     <p class="design_text">¡Descubre el producto perfecto en nuestra amplia colección de revistas, donde siempre encontrarás algo único para ti!</p>
-                     <div class="design_section_2">
-                        <div class="row">
-                           <div class="col-md-4">
-                              <div class="box_main">
-                                 <p class="chair_text">España</p>
-                                 <div class="image_3" href="#"><img src="{% static 'images/VogueEspanna.jpg' %}"></div>
-                                 <div class="buy_bt"><a href="#">Explorar</a></div>
-                              </div>
-                           </div>
-                           <div class="col-md-4">
-                              <div class="box_main">
-                                 <p class="chair_text">Polonia</p>
-                                 <div class="image_3" href="#"><img src="{% static 'images/VoguePolonia.jpg' %}"></div>
-                                 <div class="buy_bt"><a href="#">Explorar</a></div>
-                              </div>
-                           </div>
-                           <div class="col-md-4">
-                              <div class="box_main">
-                                 <p class="chair_text">Portugal</p>
-                                 <div class="image_3" href="#"><img src="{% static 'images/VoguePortugal.jpg' %}"></div>
-                                 <div class="buy_bt"><a href="#">Explorar</a></div>
-                              </div>
-                           </div>
-                        </div>
+             <div class="carousel-inner">
+                 <div class="carousel-item active">
+                     <div class="container">
+                         <h1 class="design_taital">Nuestras revistas</h1>
+                         <p class="design_text">¡Descubre el producto perfecto en nuestra amplia colección de revistas, donde siempre encontrarás algo único para ti!</p>
+                         <div class="design_section_2">
+                             <div class="row">
+                                 {% for revista in revistas %}
+                                 <div class="col-md-4">
+                                     <div class="box_main">
+                                         <p class="chair_text">{{ revista.titulo }}</p>
+                                         <div class="image_3">
+                                             <img src="{{ revista.imagen.url }}" alt="{{ revista.titulo }}">
+                                         </div>
+                                         <div class="buy_bt"><a href="#">Explorar</a></div>
+                                     </div>
+                                 </div>
+                                 {% if forloop.counter|divisibleby:3 %}
+                             </div>
+                             <div class="row">
+                                 {% endif %}
+                                 {% endfor %}
+                             </div>
+                         </div>
                      </div>
-                  </div>
-               </div>
-               <div class="carousel-item">
-                  <div class="container">
-                     <h1 class="design_taital">Nuestras revistas</h1>
-                     <p class="design_text">¡Descubre el producto perfecto en nuestra amplia colección de revistas, donde siempre encontrarás algo único para ti!</p>
-                     <div class="design_section_2">
-                        <div class="row">
-                           <div class="col-md-4">
-                              <div class="box_main">
-                                 <p class="chair_text">Ucrania</p>
-                                 <div class="image_3" href="#"><img src="{% static 'images/VogueUcrania.jpg' %}"></div>
-                                 <div class="buy_bt"><a href="#">Explorar</a></div>
-                              </div>
-                           </div>
-                           <div class="col-md-4">
-                              <div class="box_main">
-                                 <p class="chair_text">China</p>
-                                 <div class="image_3" href="#"><img src="{% static 'images/VogueChina.jpg' %}"></div>
-                                 <div class="buy_bt"><a href="#">Explorar</a></div>
-                              </div>
-                           </div>
-                           <div class="col-md-4">
-                              <div class="box_main">
-                                 <p class="chair_text">Brasil</p>
-                                 <div class="image_3" href="#"><img src="{% static 'images/VogueBrasil.jpg' %}"></div>
-                                 <div class="buy_bt"><a href="#">Explorar</a></div>
-                              </div>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
-               </div>
-               <div class="carousel-item">
-                  <div class="container">
-                     <h1 class="design_taital">Nuestras revistas</h1>
-                     <p class="design_text">¡Descubre el producto perfecto en nuestra amplia colección de revistas, donde siempre encontrarás algo único para ti!</p>
-                     <div class="design_section_2">
-                        <div class="row">
-                           <div class="col-md-4">
-                              <div class="box_main">
-                                 <p class="chair_text">Japon</p>
-                                 <div class="image_3" href="#"><img src="{% static 'images/VogueJapon.jpg' %}"></div>
-                                 <div class="buy_bt"><a href="#">Explorar</a></div>
-                              </div>
-                           </div>
-                           <div class="col-md-4">
-                              <div class="box_main">
-                                 <p class="chair_text">Grecia</p>
-                                 <div class="image_3" href="#"><img src="{% static 'images/VogueGrecia.jpg' %}"></div>
-                                 <div class="buy_bt"><a href="#">Explorar</a></div>
-                              </div>
-                           </div>
-                           <div class="col-md-4">
-                              <div class="box_main">
-                                 <p class="chair_text">Filipinas</p>
-                                 <div class="image_3" href="#"><img src="{% static 'images/VogueFilipinas.jpg' %}"></div>
-                                 <div class="buy_bt"><a href="#">Explorar</a></div>
-                              </div>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
-               </div>
-            </div>
-            <a class="carousel-control-prev" href="#my_slider" role="button" data-slide="prev">
-            <i class="fa fa-long-arrow-left" style="font-size:24px"></i>
-            </a>
-            <a class="carousel-control-next" href="#my_slider" role="button" data-slide="next">
-            <i class="fa fa-long-arrow-right" style="font-size:24px"></i>
-            </a>
+                 </div>
+             </div>
+             <a class="carousel-control-prev" href="#my_slider" role="button" data-slide="prev">
+                 <i class="fa fa-long-arrow-left" style="font-size:24px"></i>
+             </a>
+             <a class="carousel-control-next" href="#my_slider" role="button" data-slide="next">
+                 <i class="fa fa-long-arrow-right" style="font-size:24px"></i>
+             </a>
          </div>
-         <div class="extraContainer"></div>
-      </div>
+     </div>
       <!--  design section end -->
 
 
@@ -260,7 +191,7 @@
                   <div class="imgage_6"><img src="{% static 'images/Newsletter.jpg' %}"></div>
                </div>
                <div class="col-md-6">
-                  <h1 class="newsletter_taital">¿Ofertas especiales?</h1>
+                  <h1 class="newsletter_taital">¡Descubre ofertas únicas!</h1>
                   <input type="text" class="email_text" placeholder="Introduce tu email" name="Enter Your Email">
                   <div class="subscribe_bt"><a href="#">Suscríbete</a></div>
                </div>
@@ -277,12 +208,12 @@
                <div class="row">
                   <div class="col-md-6">
                      <div class="mail_section_1">
-                        <h1 class="contact_taital">Contact Us</h1>
-                        <input type="text" class="mail_text" placeholder="Name" name="text">
-                        <input type="text" class="mail_text" placeholder="Email" name="text">
-                        <input type="text" class="mail_text" placeholder="Phone Number" name="text">
-                        <textarea class="massage-bt" placeholder="Massage" rows="5" id="comment" name="Massage"></textarea>
-                        <div class="send_bt"><a href="#">SEND</a></div>
+                        <h1 class="contact_taital">¡Contáctanos!</h1>
+                        <input type="text" class="mail_text" placeholder="Nombre" name="text">
+                        <input type="text" class="mail_text" placeholder="Correo electrónicos" name="text">
+                        <input type="text" class="mail_text" placeholder="Número de teléfono" name="text">
+                        <textarea class="massage-bt" placeholder="Comentarios" rows="5" id="comment" name="Massage"></textarea>
+                        <div class="send_bt"><a href="#">ENVIAR</a></div>
                      </div>
                   </div>
                   <div class="col-md-6">
@@ -297,6 +228,8 @@
          </div>
       </div>
       <!-- contact section end -->
+
+
       <!-- footer section start -->
       <div class="footer_section">
          <div class="container">
@@ -340,13 +273,17 @@
          </div>
       </div>
       <!-- footer section end -->
+
+
       <!-- copyright section start -->
       <div class="copyright_section">
          <div class="container">
-            <p class="copyright_text">2020 All Rights Reserved. Design by <a href="https://html.design">Free html  Templates</a></p>
+            <p class="copyright_text">©UDVogue 2024. Todos los derechos reservados.</p>
          </div>
       </div>
       <!-- copyright section end -->
+
+
       <!-- Javascript files-->
       <script src="{% static 'js/jquery.min.js' %}"></script>
       <script src="{% static 'js/popper.min.js' %}"></script>
