arreglado el problema

--- a/UDVogue/UDVogueApp/templates/base.html
+++ b/UDVogue/UDVogueApp/templates/base.html
@@ -146,7 +146,7 @@
       <div id="revistas" class="design_section layout_padding">
          <div id="my_slider" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
-               {% for grupo in grupoRevistas %}
+               {% for grupo in gruposRevistas %}
                <div class="carousel-item {% if forloop.first %}active{% endif %}">
                   <div class="container" id="Revistas">
                      <h1 class="design_taital">Nuestras revistas</h1>
