cambiado id para mejorar significado

--- a/UDVogue/UDVogueApp/templates/base.html
+++ b/UDVogue/UDVogueApp/templates/base.html
@@ -143,9 +143,9 @@
 
       
       <!--  design section start -->
-      <div id="revistas" class="design_section layout_padding">
+      <div class="design_section layout_padding">
          <div id="my_slider" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
+            <div id="revistas" class="carousel-inner">
                {% for grupo in gruposRevistas %}
                <div class="carousel-item {% if forloop.first %}active{% endif %}">
                   <div class="container" id="Revistas">
