ultimas modificaciones en base.html

--- a/UDVogue/UDVogueApp/templates/base.html
+++ b/UDVogue/UDVogueApp/templates/base.html
@@ -131,8 +131,8 @@
                   </div>
                   <div class="col-md-6">
                      <h1 class="about_taital">¿Quiénes somos?</h1>
-                     <!--<p class="about_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised </p>-->
-                     {%block contenido%} {%endblock%}
+                     <p class="about_text">Somos una editorial de moda que conecta inspiración y estilo: explora nuestras revistas y haz tuyos los productos que te enamoran. </p>
+                     <!--{%block contenido%} {%endblock%}-->
                      <div class="readmore_bt"><a href="#">Más información</a></div>
                   </div>
                </div>
@@ -234,29 +234,29 @@
          <div class="container">
             <div class="footer_location_text">
                <ul>
-                  <li><img src="{% static 'images/map-icon.png' %}"><span class="padding_left_10"><a href="#">Loram Ipusm hosting web</a></span></li>
-                  <li><img src="{% static 'images/call-icon.png' %}"><span class="padding_left_10"><a href="#">Call : +7586656566</a></span></li>
-                  <li><img src="{% static 'images/mail-icon.png' %}"><span class="padding_left_10"><a href="#">demo@gmail.com</a></span></li>
+                  <li><img src="{% static 'images/map-icon.png' %}"><span class="padding_left_10"><a href="#">UDVogue web</a></span></li>
+                  <li><img src="{% static 'images/call-icon.png' %}"><span class="padding_left_10"><a href="#">Call : +944 85 43 25</a></span></li>
+                  <li><img src="{% static 'images/mail-icon.png' %}"><span class="padding_left_10"><a href="#">udvogue@gmail.com</a></span></li>
                </ul>
             </div>
             <div class="row">
                <div class="col-lg-3 col-sm-6">
-                  <h2 class="useful_text">Useful link </h2>
+                  <h2 class="useful_text">Links útiles</h2>
                   <div class="footer_menu">
                      <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="design.html">Our Designe</a></li>
-                        <li><a href="contact.html">Contact Us</a></li>
+                        <li><a href="index.html">Inicio</a></li>
+                        <li><a href="#about">Conócenos</a></li>
+                        <li><a href="#revistas">Nuestras revistas</a></li>
+                        <li><a href="#contact">¡Contáctanos!</a></li>
                      </ul>
                   </div>
                </div>
                <div class="col-lg-3 col-sm-6">
-                  <h2 class="useful_text">Repair</h2>
-                  <p class="lorem_text">Lorem ipsum dolor sit amet, consectetur  adipiscinaliqua  Loreadipiscing </p>
+                  <h2 class="useful_text">Próximos países</h2>
+                  <p class="lorem_text">"¡Muy pronto en Alemania, Francia, Estados Unidos, Argentina y Sudáfrica! </p>
                </div>
                <div class="col-lg-3 col-sm-6">
-                  <h2 class="useful_text">Social Media</h2>
+                  <h2 class="useful_text">Redes Sociales</h2>
                   <div id="social">
                      <a class="facebookBtn smGlobalBtn active" href="#" ></a>
                      <a class="twitterBtn smGlobalBtn" href="#" ></a>
@@ -265,8 +265,8 @@
                   </div>
                </div>
                <div class="col-sm-6 col-lg-3">
-                  <h1 class="useful_text">Our Repair center</h1>
-                  <p class="footer_text">Lorem ipsum dolor sit amet, consectetur adipiscinaliquaLoreadipiscing </p>
+                  <h1 class="useful_text">Nuestras revistas</h1>
+                  <p class="footer_text">Descubre productos de calidad mundial a precios increíbles: todo lo que necesitas en un solo lugar</p>
                </div>
             </div>
          </div>
