cambios en footer

--- a/UDVogue/UDVogueApp/templates/base.html
+++ b/UDVogue/UDVogueApp/templates/base.html
@@ -235,7 +235,7 @@
             <div class="footer_location_text">
                <ul>
                   <li><img src="{% static 'images/map-icon.png' %}"><span class="padding_left_10"><a href="#">UDVogue web</a></span></li>
-                  <li><img src="{% static 'images/call-icon.png' %}"><span class="padding_left_10"><a href="#">Call : +944 85 43 25</a></span></li>
+                  <li><img src="{% static 'images/call-icon.png' %}"><span class="padding_left_10"><a href="#">Tfno. : +944 85 43 25</a></span></li>
                   <li><img src="{% static 'images/mail-icon.png' %}"><span class="padding_left_10"><a href="#">udvogue@gmail.com</a></span></li>
                </ul>
             </div>
